--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -1,8 +1,10 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
+
+{% load static %}
 
 {% block content %}
 
-<h1>Add New Product</h1>
+<h1>Edit Product</h1>
 
 <form method="POST">
     {% csrf_token %}
@@ -11,7 +13,7 @@
         <tr>
             <td></td>
             <td>
-                <input type="submit" value="Add Product"/>
+                <input type="submit" value="Edit Product"/>
             </td>
         </tr>
     </table>
