--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,30 +1,74 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Shopping List Page</h1>
 
-    <h5>Name:</h5>
-    <p>{{name}}</p>
+    <h1 class="text-center">Shopping List Page</h1> 
+    <p class="text-center">by Ravie Hasan Abud</p>
+    <hr>
 
-    <h5>Class:</h5>
-    <p>{{class}}</p>
+    <nav class="navbar navbar-expand-lg bg-light">
 
-    <table>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'main:create_product' %}">
+                            <button class="btn btn-outline-success me-2" type="button">
+                                Add New Product
+                            </button>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'main:logout' %}">
+                            <button class="btn btn-outline-danger me-2" type="button">
+                                Logout
+                            </button>
+                        </a>
+                    </li>      
+                </ul>
+            </div>
+        </div>   
+
+    </nav>
+    <hr>  
+
+    <h5>Name: {{name}}</h5>
+    <h5>Class: {{class}}</h5>
+    <br>
+
+    <table class="table table-bordered text-center">
         <tr>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Description</th>
-            <th>Date Added</th>
+            <th scope="col">Name</th>
+            <th scope="col">Price</th>
+            <th scope="col">Description</th>
+            <th scope="col">Date Added</th>
+            <th scope="col">Edit Something</th>
         </tr>
 
         {% comment %} Berikut cara memperlihatkan data produk di bawah baris ini {% endcomment %}
 
         {% for product in products %}
             <tr>
-                <td>{{product.name}}</td>
+                <td scope="row">{{product.name}}</td>
                 <td>{{product.price}}</td>
                 <td>{{product.description}}</td>
                 <td>{{product.date_added}}</td>
+                <td>
+                    <a href="{% url 'main:edit_product' product.pk %}">
+                        <button type="button" class="btn btn-primary">
+                            Edit
+                        </button>
+                    </a>
+                    <a href="{% url 'main:delete_product' product.pk %}">
+                        <button type="button" class="btn btn-danger">
+                            Delete
+                        </button>
+                    </a>
+                </td>
             </tr>
         {% endfor %}
     </table>
@@ -32,17 +76,18 @@
     <br />
 
     <a href="{% url 'main:create_product' %}">
-        <button>
+        <button type="button" class="btn btn-success">
             Add New Product
         </button>
     </a>
     
     <a href="{% url 'main:logout' %}">
-        <button>
+        <button type="button" class="btn btn-danger">
             Logout
         </button>
     </a>
-    
-    <h5>Sesi terakhir login: {{ last_login }}</h5>
+    <br><br>
+
+    <p class="text-right">Sesi terakhir login: {{last_login}}</p>
 
 {% endblock content %}
