--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -3,20 +3,20 @@
 {% load static %}
 
 {% block content %}
+<div>
+    <h1>Edit Product</h1>
 
-<h1>Edit Product</h1>
-
-<form method="POST">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-        <tr>
-            <td></td>
-            <td>
-                <input type="submit" value="Edit Product"/>
-            </td>
-        </tr>
-    </table>
-</form>
-
+    <form method="POST">
+        {% csrf_token %}
+        <table>
+            {{ form.as_table }}
+            <tr>
+                <td></td>
+                <td>
+                    <input type="submit" value="Edit Product"/>
+                </td>
+            </tr>
+        </table>
+    </form>
+</div>
 {% endblock %}
