--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,46 +1,33 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding: 15px;">
+    <a class="navbar-brand" href="#">Shopping List Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarText">
+        <span class="nav-item">
+            <a class="nav-link" href="{% url 'main:logout' %}">
+                <button class="btn btn-sm btn-outline-danger me-2" type="button">
+                    Logout
+                </button>
+            </a>
+        </span>
+        <span class="navbar-text">
+            Sesi terakhir login: {{ last_login }}
+        </span>
+    </div>   
+</nav>
 
+<div>
     <h1 class="text-center">Shopping List Page</h1> 
-    <p class="text-center">by Ravie Hasan Abud</p>
-    <hr>
-
-    <nav class="navbar navbar-expand-lg bg-light">
-
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'main:create_product' %}">
-                            <button class="btn btn-outline-success me-2" type="button">
-                                Add New Product
-                            </button>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'main:logout' %}">
-                            <button class="btn btn-outline-danger me-2" type="button">
-                                Logout
-                            </button>
-                        </a>
-                    </li>      
-                </ul>
-            </div>
-        </div>   
-
-    </nav>
-    <hr>  
 
     <h5>Name: {{name}}</h5>
     <h5>Class: {{class}}</h5>
     <br>
 
-    <table class="table table-bordered text-center">
+    <table class="table table-bordered text-center" id="product_table">
         <tr>
             <th scope="col">Name</th>
             <th scope="col">Price</th>
@@ -73,7 +60,43 @@
         {% endfor %}
     </table>
 
-    <br />
+    <br>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Add New Product</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="form" onsubmit="return false;">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <label for="name" class="col-form-label">Name:</label>
+                            <input type="text" class="form-control" id="name" name="name"></input>
+                        </div>
+                        <div class="mb-3">
+                            <label for="price" class="col-form-label">Price:</label>
+                            <input type="number" class="form-control" id="price" name="price"></input>
+                        </div>
+                        <div class="mb-3">
+                            <label for="description" class="col-form-label">Description:</label>
+                            <textarea class="form-control" id="description" name="description"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="button_add" data-bs-dismiss="modal">Add Product</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        Add Product by AJAX
+    </button>
 
     <a href="{% url 'main:create_product' %}">
         <button type="button" class="btn btn-success">
@@ -87,7 +110,49 @@
         </button>
     </a>
     <br><br>
-
+    
     <p class="text-right">Sesi terakhir login: {{last_login}}</p>
+</div>
+
+<script>
+    async function getProducts() {
+        return fetch("{% url 'main:get_product_json' %}").then((res) => res.json())
+    }
+
+    async function refreshProducts() {
+        document.getElementById("product_table").innerHTML = ""
+        const products = await getProducts()
+        let htmlString = `<tr>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Description</th>
+            <th>Date Added</th>
+        </tr>`
+        products.forEach((item) => {
+            htmlString += `\n<tr>
+            <td>${item.fields.name}</td>
+            <td>${item.fields.price}</td>
+            <td>${item.fields.description}</td>
+            <td>${item.fields.date_added}</td>
+        </tr>` 
+        })
+        
+        document.getElementById("product_table").innerHTML = htmlString
+    }
+    
+    refreshProducts()
+
+    function addProduct() {
+        fetch("{% url 'main:add_product_ajax' %}", {
+            method: "POST",
+            body: new FormData(document.querySelector('#form'))
+        }).then(refreshProducts)
+
+        document.getElementById("form").reset()
+        return false
+    }
+
+    document.getElementById("button_add").onclick = addProduct
+</script>
 
 {% endblock content %}
