--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -27,7 +27,7 @@
     <h5>Class: {{class}}</h5>
     <br>
 
-    <table id="product_table"></table>
+    <table id="product_table" class="table table-bordered text-center"></table>
 
     <br>
 
@@ -79,8 +79,6 @@
         </button>
     </a>
     <br><br>
-    
-    <p class="text-right">Sesi terakhir login: {{last_login}}</p>
 </div>
 
 <script>
@@ -97,7 +95,7 @@
             <th scope="col">Price</th>
             <th scope="col">Description</th>
             <th scope="col">Date Added</th>
-            <th scope="col">Edit Something</th>
+            <th scope="col">Edit</th>
         </tr>`;
         products.forEach((item) => {
             htmlString += `\n<tr>
@@ -105,13 +103,25 @@
             <td>${item.fields.price}</td>
             <td>${item.fields.description}</td>
             <td>${item.fields.date_added}</td>
+            <td>
+                <a href="edit-product/${item.pk}">
+                    <button  type="button" class="btn btn-primary">
+                        Edit
+                    </button>
+                </a>
+                <a href="delete/${item.pk}">
+                    <button type="button" class="btn btn-danger">
+                        Delete
+                    </button>
+                </a>
+            </td>
         </tr>` 
         })
         
         document.getElementById("product_table").innerHTML = htmlString
     }
     
-    refreshProducts
+    refreshProducts();
 
     function addProduct() {
         fetch("{% url 'main:add_product_ajax' %}", {
